--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-Я Артём 
+.bukva {
+    color:black;
+}
+.block {
+    border: 2px solid brown;
+    border-radius: 25px;
+    width: 500px;
+    height: 370px;
+    padding-top: 30px;
+    margin-top: 2%;
+    margin-right: 25%;
+    padding-right: 20px;
+    margin-left: 35%;
+    padding-left: 20px;
+}
+
+.red{ 
+    color: red
+}
+
